perbaikan error message, dan duplikasi insert update data
